--- a/configs/index.ejs
+++ b/configs/index.ejs
@@ -25,15 +25,19 @@
     <meta name="msapplication-TileImage" content="/favicon/mstile-144x144.png">
     <meta name="msapplication-config" content="/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff" />
+
+    <% Object.keys(htmlWebpackPlugin.files.css).sort().forEach(function(chunkId) { %>
+    <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css[chunkId] %>" />
+    <% }); %>
+
     <title></title>
 </head>
 <body>
-<div id="root">
+<div id="root"></div>
 
-</div>
-
-<script src="/config.js?<%= webpack.hash %>"></script>
-<script src="<%= htmlWebpackPlugin.files.chunks.index.entry %>" async></script>
+<% Object.keys(htmlWebpackPlugin.files.chunks).sort().forEach(function(chunkId) { %>
+<script src="<%= htmlWebpackPlugin.files.chunks[chunkId].entry %>"></script>
+<% }); %>
 
 </body>
 </html>
