--- a/configs/index-dev.ejs
+++ b/configs/index-dev.ejs
@@ -25,7 +25,7 @@
     <meta name="msapplication-TileImage" content="/favicon/mstile-144x144.png">
     <meta name="msapplication-config" content="/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff" />
-    <title></title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
 <div id="root"></div>
