update webpack, update loaders, add examples for images and stylesheets

--- a/example-project/src/styles/index.sass
+++ b/example-project/src/styles/index.sass
@@ -1,5 +1,10 @@
+$ds: darksalmon
+
+.exampleSass
+  color: yellow
+
 .example
-  background: darksalmon
+  background: $ds
 
 .example-image
   background: url(../img/example.png)
